// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimeUsageDataMap > returns correctly formatted output... > while granularity is date 1`] = `
{
  "%groupId": null,
  "color": null,
  "defined": true,
  "duration": 1970-01-01T00:00:00.000Z,
  "durationFormatted": "0h",
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodDurFormatted": "0s",
  "goodDurPct": 0,
  "goodDurPctFormatted": "0,00% / 0,00%",
  "goodGroupGoodProduction": null,
  "goodGroupPlannedStop": null,
  "goodGroupPlannedStopIncludedInOEE": null,
  "goodGroupPlannedStopNotIncludedInOEE": null,
  "goodGroupPlannedTime": null,
  "goodProduction": 0,
  "goodProductionTooltipValue": "0s  ()",
  "groupingKey": "2022-11-25",
  "isFake": false,
  "itemGroupingId": "2022-11-25",
  "lotCode": null,
  "measureLabel": "25",
  "notes": null,
  "notesCount": null,
  "operatingTime": 0,
  "operatingTimeFormatted": "0s",
  "operatingTimePctFormatted": "0,00% / 0,00%",
  "operator": "",
  "operatorId": [
    null,
  ],
  "pctOfPlannedTime": 0,
  "pctOfPlannedTimeFormatted-0": "0%",
  "pctOfPlannedTimeFormatted-1": "0,0%",
  "pctOfPlannedTimeFormatted-2": "0,00%",
  "plannedFormatted": null,
  "plannedIncludedInOEEFormatted": "0s",
  "plannedIncludedInOEEPctFormatted": "0,00% / 0,00%",
  "plannedIncludedInOEETooltipValue": "0s  ()",
  "plannedNotIncludedInOEEFormatted": "0s",
  "plannedNotIncludedInOEEPctFormatted": "0,00%",
  "plannedNotIncludedInOEETooltipValue": "0s (0,00%)",
  "plannedPct": null,
  "plannedPctFormatted": null,
  "plannedStop": null,
  "plannedStopGroupPlannedStop": null,
  "plannedStopGroupPlannedStopIncludedInOEE": null,
  "plannedStopGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopGroupPlannedTime": null,
  "plannedStopInclGroupPlannedStop": null,
  "plannedStopInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopInclGroupPlannedTime": null,
  "plannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStop": null,
  "plannedStopNotInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedTime": null,
  "plannedStopNotIncludedInOEE": null,
  "plannedTime": null,
  "plannedTimeFormatted": "0s",
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    1957,
  ],
  "productionOrder": null,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "shiftTime": 0,
  "shiftTimeFormatted": "0s",
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "slowFormatted": "0s",
  "slowGroupPlannedStop": null,
  "slowGroupPlannedStopIncludedInOEE": null,
  "slowGroupPlannedStopNotIncludedInOEE": null,
  "slowGroupPlannedTime": null,
  "slowGroupSlowProduction": null,
  "slowPct": 0,
  "slowPctFormatted": "0,00% / 0,00%",
  "slowProduction": 0,
  "slowTooltipValue": "0s  ()",
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    1,
  ],
  "stops": 0,
  "tableTimeLabel": "25.11.2022",
  "tooltipXLabel": "25.11.2022",
  "uncommentedFormatted": "0s",
  "uncommentedPct": 0,
  "uncommentedPctFormatted": "0,00% / 0,00%",
  "uncommentedStop": 0,
  "uncommentedStopGroupPlannedStop": null,
  "uncommentedStopGroupPlannedStopIncludedInOEE": null,
  "uncommentedStopGroupPlannedStopNotIncludedInOEE": null,
  "uncommentedStopGroupPlannedTime": null,
  "uncommentedStopGroupUncommentedStop": null,
  "uncommentedTooltipValue": "0s  ()",
  "unplannedFormatted": "0s",
  "unplannedPct": 0,
  "unplannedPctFormatted": "0,00% / 0,00%",
  "unplannedStop": 0,
  "unplannedStopGroupPlannedStop": null,
  "unplannedStopGroupPlannedStopIncludedInOEE": null,
  "unplannedStopGroupPlannedStopNotIncludedInOEE": null,
  "unplannedStopGroupPlannedTime": null,
  "unplannedStopGroupUnplannedStop": null,
  "unplannedTooltipValue": "0s  ()",
  "value": 0,
  "valueFormatted-0": "0%",
  "valueFormatted-1": "0,0%",
  "valueFormatted-2": "0,00%",
  "xScaleValue": "2022-11-25",
  "xScaleValueFormatted": "25.11.2022",
}
`;

exports[`TimeUsageDataMap > returns correctly formatted output... > while granularity is month 1`] = `
{
  "%groupId": null,
  "color": null,
  "defined": true,
  "duration": 1970-01-01T00:00:00.000Z,
  "durationFormatted": "0h",
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodDurFormatted": "0s",
  "goodDurPct": 0,
  "goodDurPctFormatted": "0,00% / 0,00%",
  "goodGroupGoodProduction": null,
  "goodGroupPlannedStop": null,
  "goodGroupPlannedStopIncludedInOEE": null,
  "goodGroupPlannedStopNotIncludedInOEE": null,
  "goodGroupPlannedTime": null,
  "goodProduction": 0,
  "goodProductionTooltipValue": "0s  ()",
  "groupingKey": "202211",
  "isFake": false,
  "itemGroupingId": "202211",
  "lotCode": null,
  "measureLabel": "November",
  "notes": null,
  "notesCount": null,
  "operatingTime": 0,
  "operatingTimeFormatted": "0s",
  "operatingTimePctFormatted": "0,00% / 0,00%",
  "operator": "",
  "operatorId": [
    null,
  ],
  "pctOfPlannedTime": 0,
  "pctOfPlannedTimeFormatted-0": "0%",
  "pctOfPlannedTimeFormatted-1": "0,0%",
  "pctOfPlannedTimeFormatted-2": "0,00%",
  "plannedFormatted": null,
  "plannedIncludedInOEEFormatted": "0s",
  "plannedIncludedInOEEPctFormatted": "0,00% / 0,00%",
  "plannedIncludedInOEETooltipValue": "0s  ()",
  "plannedNotIncludedInOEEFormatted": "0s",
  "plannedNotIncludedInOEEPctFormatted": "0,00%",
  "plannedNotIncludedInOEETooltipValue": "0s (0,00%)",
  "plannedPct": null,
  "plannedPctFormatted": null,
  "plannedStop": null,
  "plannedStopGroupPlannedStop": null,
  "plannedStopGroupPlannedStopIncludedInOEE": null,
  "plannedStopGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopGroupPlannedTime": null,
  "plannedStopInclGroupPlannedStop": null,
  "plannedStopInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopInclGroupPlannedTime": null,
  "plannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStop": null,
  "plannedStopNotInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedTime": null,
  "plannedStopNotIncludedInOEE": null,
  "plannedTime": null,
  "plannedTimeFormatted": "0s",
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    8,
  ],
  "productionOrder": null,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": 0,
  "shiftTimeFormatted": "0s",
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "slowFormatted": "0s",
  "slowGroupPlannedStop": null,
  "slowGroupPlannedStopIncludedInOEE": null,
  "slowGroupPlannedStopNotIncludedInOEE": null,
  "slowGroupPlannedTime": null,
  "slowGroupSlowProduction": null,
  "slowPct": 0,
  "slowPctFormatted": "0,00% / 0,00%",
  "slowProduction": 0,
  "slowTooltipValue": "0s  ()",
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    53,
  ],
  "stops": 18526,
  "tableTimeLabel": "November",
  "tooltipXLabel": "01.11.2022 - 30.11.2022",
  "uncommentedFormatted": "0s",
  "uncommentedPct": 0,
  "uncommentedPctFormatted": "0,00% / 0,00%",
  "uncommentedStop": 0,
  "uncommentedStopGroupPlannedStop": null,
  "uncommentedStopGroupPlannedStopIncludedInOEE": null,
  "uncommentedStopGroupPlannedStopNotIncludedInOEE": null,
  "uncommentedStopGroupPlannedTime": null,
  "uncommentedStopGroupUncommentedStop": null,
  "uncommentedTooltipValue": "0s  ()",
  "unplannedFormatted": "0s",
  "unplannedPct": 0,
  "unplannedPctFormatted": "0,00% / 0,00%",
  "unplannedStop": 0,
  "unplannedStopGroupPlannedStop": null,
  "unplannedStopGroupPlannedStopIncludedInOEE": null,
  "unplannedStopGroupPlannedStopNotIncludedInOEE": null,
  "unplannedStopGroupPlannedTime": null,
  "unplannedStopGroupUnplannedStop": null,
  "unplannedTooltipValue": "0s  ()",
  "value": 0,
  "valueFormatted-0": "0%",
  "valueFormatted-1": "0,0%",
  "valueFormatted-2": "0,00%",
  "xScaleValue": "202211",
  "xScaleValueFormatted": "01.11.2022 - 30.11.2022",
}
`;

exports[`TimeUsageDataMap > returns correctly formatted output... > while granularity is total 1`] = `
{
  "%groupId": null,
  "color": null,
  "defined": true,
  "duration": 1970-01-01T00:00:00.000Z,
  "durationFormatted": "0h",
  "entityGroupName": null,
  "entityName": "Tehas 1.",
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodDurFormatted": "0s",
  "goodDurPct": 0,
  "goodDurPctFormatted": "0,00% / 0,00%",
  "goodGroupGoodProduction": null,
  "goodGroupPlannedStop": null,
  "goodGroupPlannedStopIncludedInOEE": null,
  "goodGroupPlannedStopNotIncludedInOEE": null,
  "goodGroupPlannedTime": null,
  "goodProduction": 0,
  "goodProductionTooltipValue": "0s  ()",
  "groupingKey": 2,
  "isFake": false,
  "itemGroupingId": 2,
  "lotCode": "LOT-001",
  "measureLabel": "Tehas 1.",
  "notes": null,
  "notesCount": null,
  "operatingTime": 0,
  "operatingTimeFormatted": "0s",
  "operatingTimePctFormatted": "0,00% / 0,00%",
  "operator": "",
  "operatorId": [
    null,
  ],
  "pctOfPlannedTime": 0,
  "pctOfPlannedTimeFormatted-0": "0%",
  "pctOfPlannedTimeFormatted-1": "0,0%",
  "pctOfPlannedTimeFormatted-2": "0,00%",
  "plannedFormatted": null,
  "plannedIncludedInOEEFormatted": "0s",
  "plannedIncludedInOEEPctFormatted": "0,00% / 0,00%",
  "plannedIncludedInOEETooltipValue": "0s  ()",
  "plannedNotIncludedInOEEFormatted": "0s",
  "plannedNotIncludedInOEEPctFormatted": "0,00%",
  "plannedNotIncludedInOEETooltipValue": "0s (0,00%)",
  "plannedPct": null,
  "plannedPctFormatted": null,
  "plannedStop": null,
  "plannedStopGroupPlannedStop": null,
  "plannedStopGroupPlannedStopIncludedInOEE": null,
  "plannedStopGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopGroupPlannedTime": null,
  "plannedStopInclGroupPlannedStop": null,
  "plannedStopInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopInclGroupPlannedTime": null,
  "plannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStop": null,
  "plannedStopNotInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedTime": null,
  "plannedStopNotIncludedInOEE": null,
  "plannedTime": null,
  "plannedTimeFormatted": "0s",
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    8,
  ],
  "productionOrder": "ORDER-42",
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": 0,
  "shiftTimeFormatted": "0s",
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "slowFormatted": "0s",
  "slowGroupPlannedStop": null,
  "slowGroupPlannedStopIncludedInOEE": null,
  "slowGroupPlannedStopNotIncludedInOEE": null,
  "slowGroupPlannedTime": null,
  "slowGroupSlowProduction": null,
  "slowPct": 0,
  "slowPctFormatted": "0,00% / 0,00%",
  "slowProduction": 0,
  "slowTooltipValue": "0s  ()",
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    53,
  ],
  "stops": 18526,
  "tableTimeLabel": "Tehas 1.",
  "tooltipXLabel": "Tehas 1.",
  "uncommentedFormatted": "0s",
  "uncommentedPct": 0,
  "uncommentedPctFormatted": "0,00% / 0,00%",
  "uncommentedStop": 0,
  "uncommentedStopGroupPlannedStop": null,
  "uncommentedStopGroupPlannedStopIncludedInOEE": null,
  "uncommentedStopGroupPlannedStopNotIncludedInOEE": null,
  "uncommentedStopGroupPlannedTime": null,
  "uncommentedStopGroupUncommentedStop": null,
  "uncommentedTooltipValue": "0s  ()",
  "unplannedFormatted": "0s",
  "unplannedPct": 0,
  "unplannedPctFormatted": "0,00% / 0,00%",
  "unplannedStop": 0,
  "unplannedStopGroupPlannedStop": null,
  "unplannedStopGroupPlannedStopIncludedInOEE": null,
  "unplannedStopGroupPlannedStopNotIncludedInOEE": null,
  "unplannedStopGroupPlannedTime": null,
  "unplannedStopGroupUnplannedStop": null,
  "unplannedTooltipValue": "0s  ()",
  "value": 0,
  "valueFormatted-0": "0%",
  "valueFormatted-1": "0,0%",
  "valueFormatted-2": "0,00%",
  "xScaleValue": 2,
  "xScaleValueFormatted": "",
}
`;

exports[`TimeUsageDataMap > returns correctly formatted output... > while granularity is weekofyear 1`] = `
{
  "%groupId": null,
  "color": null,
  "defined": true,
  "duration": 1970-01-01T00:00:00.000Z,
  "durationFormatted": "0h",
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodDurFormatted": "0s",
  "goodDurPct": 0,
  "goodDurPctFormatted": "0,00% / 0,00%",
  "goodGroupGoodProduction": null,
  "goodGroupPlannedStop": null,
  "goodGroupPlannedStopIncludedInOEE": null,
  "goodGroupPlannedStopNotIncludedInOEE": null,
  "goodGroupPlannedTime": null,
  "goodProduction": 0,
  "goodProductionTooltipValue": "0s  ()",
  "groupingKey": "202247",
  "isFake": false,
  "itemGroupingId": "202247",
  "lotCode": null,
  "measureLabel": "47",
  "notes": null,
  "notesCount": null,
  "operatingTime": 0,
  "operatingTimeFormatted": "0s",
  "operatingTimePctFormatted": "0,00% / 0,00%",
  "operator": "",
  "operatorId": [
    null,
  ],
  "pctOfPlannedTime": 0,
  "pctOfPlannedTimeFormatted-0": "0%",
  "pctOfPlannedTimeFormatted-1": "0,0%",
  "pctOfPlannedTimeFormatted-2": "0,00%",
  "plannedFormatted": null,
  "plannedIncludedInOEEFormatted": "0s",
  "plannedIncludedInOEEPctFormatted": "0,00% / 0,00%",
  "plannedIncludedInOEETooltipValue": "0s  ()",
  "plannedNotIncludedInOEEFormatted": "0s",
  "plannedNotIncludedInOEEPctFormatted": "0,00%",
  "plannedNotIncludedInOEETooltipValue": "0s (0,00%)",
  "plannedPct": null,
  "plannedPctFormatted": null,
  "plannedStop": null,
  "plannedStopGroupPlannedStop": null,
  "plannedStopGroupPlannedStopIncludedInOEE": null,
  "plannedStopGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopGroupPlannedTime": null,
  "plannedStopInclGroupPlannedStop": null,
  "plannedStopInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopInclGroupPlannedTime": null,
  "plannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStop": null,
  "plannedStopNotInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedTime": null,
  "plannedStopNotIncludedInOEE": null,
  "plannedTime": null,
  "plannedTimeFormatted": "0s",
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    1957,
  ],
  "productionOrder": null,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "shiftTime": 0,
  "shiftTimeFormatted": "0s",
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "slowFormatted": "0s",
  "slowGroupPlannedStop": null,
  "slowGroupPlannedStopIncludedInOEE": null,
  "slowGroupPlannedStopNotIncludedInOEE": null,
  "slowGroupPlannedTime": null,
  "slowGroupSlowProduction": null,
  "slowPct": 0,
  "slowPctFormatted": "0,00% / 0,00%",
  "slowProduction": 0,
  "slowTooltipValue": "0s  ()",
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    1,
  ],
  "stops": 0,
  "tableTimeLabel": "Week 47",
  "tooltipXLabel": "Week 47",
  "uncommentedFormatted": "0s",
  "uncommentedPct": 0,
  "uncommentedPctFormatted": "0,00% / 0,00%",
  "uncommentedStop": 0,
  "uncommentedStopGroupPlannedStop": null,
  "uncommentedStopGroupPlannedStopIncludedInOEE": null,
  "uncommentedStopGroupPlannedStopNotIncludedInOEE": null,
  "uncommentedStopGroupPlannedTime": null,
  "uncommentedStopGroupUncommentedStop": null,
  "uncommentedTooltipValue": "0s  ()",
  "unplannedFormatted": "0s",
  "unplannedPct": 0,
  "unplannedPctFormatted": "0,00% / 0,00%",
  "unplannedStop": 0,
  "unplannedStopGroupPlannedStop": null,
  "unplannedStopGroupPlannedStopIncludedInOEE": null,
  "unplannedStopGroupPlannedStopNotIncludedInOEE": null,
  "unplannedStopGroupPlannedTime": null,
  "unplannedStopGroupUnplannedStop": null,
  "unplannedTooltipValue": "0s  ()",
  "value": 0,
  "valueFormatted-0": "0%",
  "valueFormatted-1": "0,0%",
  "valueFormatted-2": "0,00%",
  "xScaleValue": "202247",
  "xScaleValueFormatted": "Week 47",
}
`;

exports[`TimeUsageDataMap > returns correctly formatted output... > while granularity is year 1`] = `
{
  "%groupId": null,
  "color": null,
  "defined": true,
  "duration": 1970-01-01T00:00:00.000Z,
  "durationFormatted": "0h",
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodDurFormatted": "0s",
  "goodDurPct": 0,
  "goodDurPctFormatted": "0,00% / 0,00%",
  "goodGroupGoodProduction": null,
  "goodGroupPlannedStop": null,
  "goodGroupPlannedStopIncludedInOEE": null,
  "goodGroupPlannedStopNotIncludedInOEE": null,
  "goodGroupPlannedTime": null,
  "goodProduction": 0,
  "goodProductionTooltipValue": "0s  ()",
  "groupingKey": "2022",
  "isFake": false,
  "itemGroupingId": "2022",
  "lotCode": null,
  "measureLabel": "2022",
  "notes": null,
  "notesCount": null,
  "operatingTime": 0,
  "operatingTimeFormatted": "0s",
  "operatingTimePctFormatted": "0,00% / 0,00%",
  "operator": "",
  "operatorId": [
    null,
  ],
  "pctOfPlannedTime": 0,
  "pctOfPlannedTimeFormatted-0": "0%",
  "pctOfPlannedTimeFormatted-1": "0,0%",
  "pctOfPlannedTimeFormatted-2": "0,00%",
  "plannedFormatted": null,
  "plannedIncludedInOEEFormatted": "0s",
  "plannedIncludedInOEEPctFormatted": "0,00% / 0,00%",
  "plannedIncludedInOEETooltipValue": "0s  ()",
  "plannedNotIncludedInOEEFormatted": "0s",
  "plannedNotIncludedInOEEPctFormatted": "0,00%",
  "plannedNotIncludedInOEETooltipValue": "0s (0,00%)",
  "plannedPct": null,
  "plannedPctFormatted": null,
  "plannedStop": null,
  "plannedStopGroupPlannedStop": null,
  "plannedStopGroupPlannedStopIncludedInOEE": null,
  "plannedStopGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopGroupPlannedTime": null,
  "plannedStopInclGroupPlannedStop": null,
  "plannedStopInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopInclGroupPlannedTime": null,
  "plannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStop": null,
  "plannedStopNotInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedTime": null,
  "plannedStopNotIncludedInOEE": null,
  "plannedTime": null,
  "plannedTimeFormatted": "0s",
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    8,
  ],
  "productionOrder": null,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": 0,
  "shiftTimeFormatted": "0s",
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "slowFormatted": "0s",
  "slowGroupPlannedStop": null,
  "slowGroupPlannedStopIncludedInOEE": null,
  "slowGroupPlannedStopNotIncludedInOEE": null,
  "slowGroupPlannedTime": null,
  "slowGroupSlowProduction": null,
  "slowPct": 0,
  "slowPctFormatted": "0,00% / 0,00%",
  "slowProduction": 0,
  "slowTooltipValue": "0s  ()",
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    53,
  ],
  "stops": 18526,
  "tableTimeLabel": "2022",
  "tooltipXLabel": "2022",
  "uncommentedFormatted": "0s",
  "uncommentedPct": 0,
  "uncommentedPctFormatted": "0,00% / 0,00%",
  "uncommentedStop": 0,
  "uncommentedStopGroupPlannedStop": null,
  "uncommentedStopGroupPlannedStopIncludedInOEE": null,
  "uncommentedStopGroupPlannedStopNotIncludedInOEE": null,
  "uncommentedStopGroupPlannedTime": null,
  "uncommentedStopGroupUncommentedStop": null,
  "uncommentedTooltipValue": "0s  ()",
  "unplannedFormatted": "0s",
  "unplannedPct": 0,
  "unplannedPctFormatted": "0,00% / 0,00%",
  "unplannedStop": 0,
  "unplannedStopGroupPlannedStop": null,
  "unplannedStopGroupPlannedStopIncludedInOEE": null,
  "unplannedStopGroupPlannedStopNotIncludedInOEE": null,
  "unplannedStopGroupPlannedTime": null,
  "unplannedStopGroupUnplannedStop": null,
  "unplannedTooltipValue": "0s  ()",
  "value": 0,
  "valueFormatted-0": "0%",
  "valueFormatted-1": "0,0%",
  "valueFormatted-2": "0,00%",
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;

exports[`TimeUsageDataMap > returns correctly unformatted output... > while granularity is date 1`] = `
{
  "%groupId": null,
  "color": null,
  "defined": null,
  "duration": null,
  "durationFormatted": null,
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": null,
  "goodDurFormatted": null,
  "goodDurPct": null,
  "goodDurPctFormatted": null,
  "goodGroupGoodProduction": null,
  "goodGroupPlannedStop": null,
  "goodGroupPlannedStopIncludedInOEE": null,
  "goodGroupPlannedStopNotIncludedInOEE": null,
  "goodGroupPlannedTime": null,
  "goodProduction": null,
  "goodProductionTooltipValue": null,
  "groupingKey": null,
  "isFake": false,
  "itemGroupingId": "2022-11-25",
  "lotCode": null,
  "measureLabel": "2022-11-25",
  "notes": null,
  "notesCount": null,
  "operatingTime": null,
  "operatingTimeFormatted": null,
  "operatingTimePctFormatted": null,
  "operator": "",
  "operatorId": null,
  "pctOfPlannedTime": null,
  "pctOfPlannedTimeFormatted-0": null,
  "pctOfPlannedTimeFormatted-1": null,
  "pctOfPlannedTimeFormatted-2": null,
  "plannedFormatted": null,
  "plannedIncludedInOEEFormatted": null,
  "plannedIncludedInOEEPctFormatted": null,
  "plannedIncludedInOEETooltipValue": null,
  "plannedNotIncludedInOEEFormatted": null,
  "plannedNotIncludedInOEEPctFormatted": null,
  "plannedNotIncludedInOEETooltipValue": null,
  "plannedPct": null,
  "plannedPctFormatted": null,
  "plannedStop": null,
  "plannedStopGroupPlannedStop": null,
  "plannedStopGroupPlannedStopIncludedInOEE": null,
  "plannedStopGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopGroupPlannedTime": null,
  "plannedStopInclGroupPlannedStop": null,
  "plannedStopInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopInclGroupPlannedTime": null,
  "plannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStop": null,
  "plannedStopNotInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedTime": null,
  "plannedStopNotIncludedInOEE": null,
  "plannedTime": null,
  "plannedTimeFormatted": null,
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": null,
  "productId": 1957,
  "productionOrder": null,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "shiftTime": null,
  "shiftTimeFormatted": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "slowFormatted": null,
  "slowGroupPlannedStop": null,
  "slowGroupPlannedStopIncludedInOEE": null,
  "slowGroupPlannedStopNotIncludedInOEE": null,
  "slowGroupPlannedTime": null,
  "slowGroupSlowProduction": null,
  "slowPct": null,
  "slowPctFormatted": null,
  "slowProduction": null,
  "slowTooltipValue": null,
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": 1,
  "stationId": 1,
  "stops": 0,
  "tableTimeLabel": "2022-11-25",
  "tooltipXLabel": "2022-11-25",
  "uncommentedFormatted": null,
  "uncommentedPct": null,
  "uncommentedPctFormatted": null,
  "uncommentedStop": null,
  "uncommentedStopGroupPlannedStop": null,
  "uncommentedStopGroupPlannedStopIncludedInOEE": null,
  "uncommentedStopGroupPlannedStopNotIncludedInOEE": null,
  "uncommentedStopGroupPlannedTime": null,
  "uncommentedStopGroupUncommentedStop": null,
  "uncommentedTooltipValue": null,
  "unplannedFormatted": null,
  "unplannedPct": null,
  "unplannedPctFormatted": null,
  "unplannedStop": null,
  "unplannedStopGroupPlannedStop": null,
  "unplannedStopGroupPlannedStopIncludedInOEE": null,
  "unplannedStopGroupPlannedStopNotIncludedInOEE": null,
  "unplannedStopGroupPlannedTime": null,
  "unplannedStopGroupUnplannedStop": null,
  "unplannedTooltipValue": null,
  "value": null,
  "valueFormatted-0": null,
  "valueFormatted-1": null,
  "valueFormatted-2": null,
  "xScaleValue": "2022-11-25",
  "xScaleValueFormatted": "2022-11-25",
}
`;

exports[`TimeUsageDataMap > returns correctly unformatted output... > while granularity is month 1`] = `
{
  "%groupId": null,
  "color": null,
  "defined": null,
  "duration": null,
  "durationFormatted": null,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": null,
  "goodDurFormatted": null,
  "goodDurPct": null,
  "goodDurPctFormatted": null,
  "goodGroupGoodProduction": null,
  "goodGroupPlannedStop": null,
  "goodGroupPlannedStopIncludedInOEE": null,
  "goodGroupPlannedStopNotIncludedInOEE": null,
  "goodGroupPlannedTime": null,
  "goodProduction": null,
  "goodProductionTooltipValue": null,
  "groupingKey": null,
  "isFake": false,
  "itemGroupingId": "202211",
  "lotCode": null,
  "measureLabel": "202211",
  "notes": null,
  "notesCount": null,
  "operatingTime": null,
  "operatingTimeFormatted": null,
  "operatingTimePctFormatted": null,
  "operator": "",
  "operatorId": null,
  "pctOfPlannedTime": null,
  "pctOfPlannedTimeFormatted-0": null,
  "pctOfPlannedTimeFormatted-1": null,
  "pctOfPlannedTimeFormatted-2": null,
  "plannedFormatted": null,
  "plannedIncludedInOEEFormatted": null,
  "plannedIncludedInOEEPctFormatted": null,
  "plannedIncludedInOEETooltipValue": null,
  "plannedNotIncludedInOEEFormatted": null,
  "plannedNotIncludedInOEEPctFormatted": null,
  "plannedNotIncludedInOEETooltipValue": null,
  "plannedPct": null,
  "plannedPctFormatted": null,
  "plannedStop": null,
  "plannedStopGroupPlannedStop": null,
  "plannedStopGroupPlannedStopIncludedInOEE": null,
  "plannedStopGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopGroupPlannedTime": null,
  "plannedStopInclGroupPlannedStop": null,
  "plannedStopInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopInclGroupPlannedTime": null,
  "plannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStop": null,
  "plannedStopNotInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedTime": null,
  "plannedStopNotIncludedInOEE": null,
  "plannedTime": null,
  "plannedTimeFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": null,
  "productId": 8,
  "productionOrder": null,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": null,
  "shiftTimeFormatted": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "slowFormatted": null,
  "slowGroupPlannedStop": null,
  "slowGroupPlannedStopIncludedInOEE": null,
  "slowGroupPlannedStopNotIncludedInOEE": null,
  "slowGroupPlannedTime": null,
  "slowGroupSlowProduction": null,
  "slowPct": null,
  "slowPctFormatted": null,
  "slowProduction": null,
  "slowTooltipValue": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 53,
  "stops": 18526,
  "tableTimeLabel": "202211",
  "tooltipXLabel": "202211",
  "uncommentedFormatted": null,
  "uncommentedPct": null,
  "uncommentedPctFormatted": null,
  "uncommentedStop": null,
  "uncommentedStopGroupPlannedStop": null,
  "uncommentedStopGroupPlannedStopIncludedInOEE": null,
  "uncommentedStopGroupPlannedStopNotIncludedInOEE": null,
  "uncommentedStopGroupPlannedTime": null,
  "uncommentedStopGroupUncommentedStop": null,
  "uncommentedTooltipValue": null,
  "unplannedFormatted": null,
  "unplannedPct": null,
  "unplannedPctFormatted": null,
  "unplannedStop": null,
  "unplannedStopGroupPlannedStop": null,
  "unplannedStopGroupPlannedStopIncludedInOEE": null,
  "unplannedStopGroupPlannedStopNotIncludedInOEE": null,
  "unplannedStopGroupPlannedTime": null,
  "unplannedStopGroupUnplannedStop": null,
  "unplannedTooltipValue": null,
  "value": null,
  "valueFormatted-0": null,
  "valueFormatted-1": null,
  "valueFormatted-2": null,
  "xScaleValue": "202211",
  "xScaleValueFormatted": "202211",
}
`;

exports[`TimeUsageDataMap > returns correctly unformatted output... > while granularity is total 1`] = `
{
  "%groupId": null,
  "color": null,
  "defined": null,
  "duration": null,
  "durationFormatted": null,
  "entityGroupName": null,
  "entityName": "Tehas 1.",
  "factory": null,
  "factoryId": null,
  "goodDurFormatted": null,
  "goodDurPct": null,
  "goodDurPctFormatted": null,
  "goodGroupGoodProduction": null,
  "goodGroupPlannedStop": null,
  "goodGroupPlannedStopIncludedInOEE": null,
  "goodGroupPlannedStopNotIncludedInOEE": null,
  "goodGroupPlannedTime": null,
  "goodProduction": null,
  "goodProductionTooltipValue": null,
  "groupingKey": null,
  "isFake": false,
  "itemGroupingId": 2,
  "lotCode": "LOT-001",
  "measureLabel": "Tehas 1.",
  "notes": null,
  "notesCount": null,
  "operatingTime": null,
  "operatingTimeFormatted": null,
  "operatingTimePctFormatted": null,
  "operator": "",
  "operatorId": null,
  "pctOfPlannedTime": null,
  "pctOfPlannedTimeFormatted-0": null,
  "pctOfPlannedTimeFormatted-1": null,
  "pctOfPlannedTimeFormatted-2": null,
  "plannedFormatted": null,
  "plannedIncludedInOEEFormatted": null,
  "plannedIncludedInOEEPctFormatted": null,
  "plannedIncludedInOEETooltipValue": null,
  "plannedNotIncludedInOEEFormatted": null,
  "plannedNotIncludedInOEEPctFormatted": null,
  "plannedNotIncludedInOEETooltipValue": null,
  "plannedPct": null,
  "plannedPctFormatted": null,
  "plannedStop": null,
  "plannedStopGroupPlannedStop": null,
  "plannedStopGroupPlannedStopIncludedInOEE": null,
  "plannedStopGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopGroupPlannedTime": null,
  "plannedStopInclGroupPlannedStop": null,
  "plannedStopInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopInclGroupPlannedTime": null,
  "plannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStop": null,
  "plannedStopNotInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedTime": null,
  "plannedStopNotIncludedInOEE": null,
  "plannedTime": null,
  "plannedTimeFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": null,
  "productId": 8,
  "productionOrder": "ORDER-42",
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": null,
  "shiftTimeFormatted": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "slowFormatted": null,
  "slowGroupPlannedStop": null,
  "slowGroupPlannedStopIncludedInOEE": null,
  "slowGroupPlannedStopNotIncludedInOEE": null,
  "slowGroupPlannedTime": null,
  "slowGroupSlowProduction": null,
  "slowPct": null,
  "slowPctFormatted": null,
  "slowProduction": null,
  "slowTooltipValue": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 53,
  "stops": 18526,
  "tableTimeLabel": "Tehas 1.",
  "tooltipXLabel": "Tehas 1.",
  "uncommentedFormatted": null,
  "uncommentedPct": null,
  "uncommentedPctFormatted": null,
  "uncommentedStop": null,
  "uncommentedStopGroupPlannedStop": null,
  "uncommentedStopGroupPlannedStopIncludedInOEE": null,
  "uncommentedStopGroupPlannedStopNotIncludedInOEE": null,
  "uncommentedStopGroupPlannedTime": null,
  "uncommentedStopGroupUncommentedStop": null,
  "uncommentedTooltipValue": null,
  "unplannedFormatted": null,
  "unplannedPct": null,
  "unplannedPctFormatted": null,
  "unplannedStop": null,
  "unplannedStopGroupPlannedStop": null,
  "unplannedStopGroupPlannedStopIncludedInOEE": null,
  "unplannedStopGroupPlannedStopNotIncludedInOEE": null,
  "unplannedStopGroupPlannedTime": null,
  "unplannedStopGroupUnplannedStop": null,
  "unplannedTooltipValue": null,
  "value": null,
  "valueFormatted-0": null,
  "valueFormatted-1": null,
  "valueFormatted-2": null,
  "xScaleValue": 2,
  "xScaleValueFormatted": 2,
}
`;

exports[`TimeUsageDataMap > returns correctly unformatted output... > while granularity is weekofyear 1`] = `
{
  "%groupId": null,
  "color": null,
  "defined": null,
  "duration": null,
  "durationFormatted": null,
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": null,
  "goodDurFormatted": null,
  "goodDurPct": null,
  "goodDurPctFormatted": null,
  "goodGroupGoodProduction": null,
  "goodGroupPlannedStop": null,
  "goodGroupPlannedStopIncludedInOEE": null,
  "goodGroupPlannedStopNotIncludedInOEE": null,
  "goodGroupPlannedTime": null,
  "goodProduction": null,
  "goodProductionTooltipValue": null,
  "groupingKey": null,
  "isFake": false,
  "itemGroupingId": "202247",
  "lotCode": null,
  "measureLabel": "202247",
  "notes": null,
  "notesCount": null,
  "operatingTime": null,
  "operatingTimeFormatted": null,
  "operatingTimePctFormatted": null,
  "operator": "",
  "operatorId": null,
  "pctOfPlannedTime": null,
  "pctOfPlannedTimeFormatted-0": null,
  "pctOfPlannedTimeFormatted-1": null,
  "pctOfPlannedTimeFormatted-2": null,
  "plannedFormatted": null,
  "plannedIncludedInOEEFormatted": null,
  "plannedIncludedInOEEPctFormatted": null,
  "plannedIncludedInOEETooltipValue": null,
  "plannedNotIncludedInOEEFormatted": null,
  "plannedNotIncludedInOEEPctFormatted": null,
  "plannedNotIncludedInOEETooltipValue": null,
  "plannedPct": null,
  "plannedPctFormatted": null,
  "plannedStop": null,
  "plannedStopGroupPlannedStop": null,
  "plannedStopGroupPlannedStopIncludedInOEE": null,
  "plannedStopGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopGroupPlannedTime": null,
  "plannedStopInclGroupPlannedStop": null,
  "plannedStopInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopInclGroupPlannedTime": null,
  "plannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStop": null,
  "plannedStopNotInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedTime": null,
  "plannedStopNotIncludedInOEE": null,
  "plannedTime": null,
  "plannedTimeFormatted": null,
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": null,
  "productId": 1957,
  "productionOrder": null,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "shiftTime": null,
  "shiftTimeFormatted": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "slowFormatted": null,
  "slowGroupPlannedStop": null,
  "slowGroupPlannedStopIncludedInOEE": null,
  "slowGroupPlannedStopNotIncludedInOEE": null,
  "slowGroupPlannedTime": null,
  "slowGroupSlowProduction": null,
  "slowPct": null,
  "slowPctFormatted": null,
  "slowProduction": null,
  "slowTooltipValue": null,
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": 1,
  "stationId": 1,
  "stops": 0,
  "tableTimeLabel": "202247",
  "tooltipXLabel": "202247",
  "uncommentedFormatted": null,
  "uncommentedPct": null,
  "uncommentedPctFormatted": null,
  "uncommentedStop": null,
  "uncommentedStopGroupPlannedStop": null,
  "uncommentedStopGroupPlannedStopIncludedInOEE": null,
  "uncommentedStopGroupPlannedStopNotIncludedInOEE": null,
  "uncommentedStopGroupPlannedTime": null,
  "uncommentedStopGroupUncommentedStop": null,
  "uncommentedTooltipValue": null,
  "unplannedFormatted": null,
  "unplannedPct": null,
  "unplannedPctFormatted": null,
  "unplannedStop": null,
  "unplannedStopGroupPlannedStop": null,
  "unplannedStopGroupPlannedStopIncludedInOEE": null,
  "unplannedStopGroupPlannedStopNotIncludedInOEE": null,
  "unplannedStopGroupPlannedTime": null,
  "unplannedStopGroupUnplannedStop": null,
  "unplannedTooltipValue": null,
  "value": null,
  "valueFormatted-0": null,
  "valueFormatted-1": null,
  "valueFormatted-2": null,
  "xScaleValue": "202247",
  "xScaleValueFormatted": "202247",
}
`;

exports[`TimeUsageDataMap > returns correctly unformatted output... > while granularity is year 1`] = `
{
  "%groupId": null,
  "color": null,
  "defined": null,
  "duration": null,
  "durationFormatted": null,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": null,
  "goodDurFormatted": null,
  "goodDurPct": null,
  "goodDurPctFormatted": null,
  "goodGroupGoodProduction": null,
  "goodGroupPlannedStop": null,
  "goodGroupPlannedStopIncludedInOEE": null,
  "goodGroupPlannedStopNotIncludedInOEE": null,
  "goodGroupPlannedTime": null,
  "goodProduction": null,
  "goodProductionTooltipValue": null,
  "groupingKey": null,
  "isFake": false,
  "itemGroupingId": "2022",
  "lotCode": null,
  "measureLabel": "2022",
  "notes": null,
  "notesCount": null,
  "operatingTime": null,
  "operatingTimeFormatted": null,
  "operatingTimePctFormatted": null,
  "operator": "",
  "operatorId": null,
  "pctOfPlannedTime": null,
  "pctOfPlannedTimeFormatted-0": null,
  "pctOfPlannedTimeFormatted-1": null,
  "pctOfPlannedTimeFormatted-2": null,
  "plannedFormatted": null,
  "plannedIncludedInOEEFormatted": null,
  "plannedIncludedInOEEPctFormatted": null,
  "plannedIncludedInOEETooltipValue": null,
  "plannedNotIncludedInOEEFormatted": null,
  "plannedNotIncludedInOEEPctFormatted": null,
  "plannedNotIncludedInOEETooltipValue": null,
  "plannedPct": null,
  "plannedPctFormatted": null,
  "plannedStop": null,
  "plannedStopGroupPlannedStop": null,
  "plannedStopGroupPlannedStopIncludedInOEE": null,
  "plannedStopGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopGroupPlannedTime": null,
  "plannedStopInclGroupPlannedStop": null,
  "plannedStopInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopInclGroupPlannedTime": null,
  "plannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStop": null,
  "plannedStopNotInclGroupPlannedStopIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedStopNotIncludedInOEE": null,
  "plannedStopNotInclGroupPlannedTime": null,
  "plannedStopNotIncludedInOEE": null,
  "plannedTime": null,
  "plannedTimeFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": null,
  "productId": 8,
  "productionOrder": null,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": null,
  "shiftTimeFormatted": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "slowFormatted": null,
  "slowGroupPlannedStop": null,
  "slowGroupPlannedStopIncludedInOEE": null,
  "slowGroupPlannedStopNotIncludedInOEE": null,
  "slowGroupPlannedTime": null,
  "slowGroupSlowProduction": null,
  "slowPct": null,
  "slowPctFormatted": null,
  "slowProduction": null,
  "slowTooltipValue": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 53,
  "stops": 18526,
  "tableTimeLabel": "2022",
  "tooltipXLabel": "2022",
  "uncommentedFormatted": null,
  "uncommentedPct": null,
  "uncommentedPctFormatted": null,
  "uncommentedStop": null,
  "uncommentedStopGroupPlannedStop": null,
  "uncommentedStopGroupPlannedStopIncludedInOEE": null,
  "uncommentedStopGroupPlannedStopNotIncludedInOEE": null,
  "uncommentedStopGroupPlannedTime": null,
  "uncommentedStopGroupUncommentedStop": null,
  "uncommentedTooltipValue": null,
  "unplannedFormatted": null,
  "unplannedPct": null,
  "unplannedPctFormatted": null,
  "unplannedStop": null,
  "unplannedStopGroupPlannedStop": null,
  "unplannedStopGroupPlannedStopIncludedInOEE": null,
  "unplannedStopGroupPlannedStopNotIncludedInOEE": null,
  "unplannedStopGroupPlannedTime": null,
  "unplannedStopGroupUnplannedStop": null,
  "unplannedTooltipValue": null,
  "value": null,
  "valueFormatted-0": null,
  "valueFormatted-1": null,
  "valueFormatted-2": null,
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;
